--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <script>
         window.$docsify = {
             name: 'Oracle DOCS',
-            repo: 'https://github.com/FAN-finance/Oracle.GitHub.io',
+            repo: 'https://raw.githubusercontent.com/FAN-finance/stock/gh-pages/',
             auto2top: true,
             loadSidebar: true,
             loadNavbar:true,
             subMaxLevel: 2,
             themeColor: '#2f54eb',
-            fallbackLanguages:['cn','en']
+            // fallbackLanguages:['cn','en']
         }
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
