--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             name: 'Oracle DOCS',
             repo: 'https://raw.githubusercontent.com/FAN-finance/stock/gh-pages/',
             auto2top: true,
-            loadSidebar: "sidebar.md",
-            loadNavbar:"navbar.md",
+            loadSidebar: "assets/sidebar.md",
+            loadNavbar:"assets/navbar.md",
             subMaxLevel: 2,
             themeColor: '#2f54eb',
             // fallbackLanguages:['cn','en']
