--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script>
         window.$docsify = {
             name: 'Oracle DOCS',
-            repo: 'https://raw.githubusercontent.com/FAN-finance/stock/gh-pages/',
+            repo: 'https://github.com/FAN-finance/stock',
             auto2top: true,
             loadSidebar: "assets/sidebar.md",
             loadNavbar:"assets/navbar.md",
